--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,12 @@ datasets/real/higgs/
 datasets/synthetic/er_10000_02/
 datasets/synthetic/er_10000_005/
 
+test.ipynb
+
 datasets/real/higgs/diffusions/
 datasets/real/ego-facebook/diffusions/
 datasets/real/ego-twitter/diffusions/
+datasets/synthetic/er_100_01/diffusions/
 datasets/synthetic/er_1000_02/diffusions/
 datasets/synthetic/er_1000_005/diffusions/
 datasets/synthetic/er_10000_02/diffusions/
