--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,19 @@ graphs/
 .DS_Store
 .python-version
 
+dynamic-message-passing/
+
 datasets/real/higgs/
 datasets/synthetic/er_10000_02/
 datasets/synthetic/er_10000_005/
+datasets/real/congress-twitter/
+datasets/synthetic/ba_1000_2/
+datasets/synthetic/ba_1000_4/
 
 test.ipynb
 test.txt
 notes/
-
+figs/
 
 datasets/real/higgs/diffusions/
 datasets/real/ego-facebook/diffusions/
